--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
         android:theme="@style/Theme.RecruitmentManager"
         tools:targetApi="31">
         <activity
+            android:name=".SignUpCandidate"
+            android:exported="false" />
+        <activity
+            android:name=".SignUpEmployer"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StartScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
