--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".Activity.GetHistoryApplication"
+            android:exported="false" />
+        <activity
             android:name=".Activity.GetCandidateInfoDetail"
             android:exported="false" />
         <activity
@@ -29,23 +32,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".Activity.MainActivity"
             android:exported="false" />
-
         <activity
             android:name=".Activity.GetRecruitmentNewsList"
             android:exported="false" />
-
         <activity
             android:name=".Activity.StartScreen"
             android:exported="false" />
-
         <activity
             android:name=".Activity.GetRecruitmentNewDetail"
             android:exported="false" />
-
         <activity
             android:name=".Activity.GetEmployerList"
             android:exported="false" />
