--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".GetRecruitmentApplicationList"
+            android:name=".Activity.UpdateResultApplication"
+            android:exported="false" />
+        <activity
+            android:name=".Activity.GetRecruitmentApplicationList"
             android:exported="false" />
         <activity
             android:name=".Activity.CreateRecruitmentNews"
